--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="header-text">Vajraaditya Vijay</div>
         </div>
 
-        <img src="/My Image.PNG" alt="My Image" class="🖼️">
+        <img src="file:///C:/Users/Vajraaditya/OneDrive/Documents/Vs%20code%20files/Vajraaditya/My%20Image.png" alt="My Image" class="🖼️">
 
         <div class="👋">Hey there 👋,<br> I am Vajraaditya Vijay</div>
 
