--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="header-text">Vajraaditya Vijay</div>
         </div>
 
-        <img src="https://vajraadityavijay.github.io/vajraadityavijay.github.io/My%20Image.png" alt="My Image" class="🖼️">
+        <img src="https://vajraadityavijay.github.io/My%20Image.png" alt="My Image" class="🖼️">
 
         <div class="👋">Hey there 👋,<br> I am Vajraaditya Vijay</div>
 
